@@ -27,7 +27,6 @@ public:
   void						ChangetheSpeed(DWORD action);
   virtual void    OnExecute(int iAction, const IOSDOption* option);
   bool            m_bOSDVisible;
-  void			  SetViewMode(int iViewMode);
 	bool				m_bSmoothFFwdRewd;
 	bool				m_bDiscreteFFwdRewd;
 
